# django-future

./: .gitignore  .travis.yml  README.rst  pyproject.toml  runtests.py  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yaml  test.yml
src/django_future/: __init__.py  admin.py  apps.py  jobs.py  models.py  tests.py  tests.txt  utils.py
src/django_future/management/commands/: runscheduledjobs.py
src/django_future/migrations/: 0001_initial.py  0002_populate_mailing_refs.py  0003_unique_content_type_and_object_id.py
tests/: settings.py  test_commands.py  test_jobs.py  test_models.py  test_settings.py  test_utils.py
