[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-future-fork"
version = "0.5.2"
authors = [
    { name="Shrubbery Software", email="team@shrubberysoft.com" },
    { name="Gintautas Miliauskas", email="team@shrubberysoft.com" },
    { name="Adomas PaltanaviÄius", email="team@shrubberysoft.com" },
    { name="Maciek Szczesniak", email="team@shrubberysoft.com "},
    { name="Jannis Leidel", email="team@shrubberysoft.com" },
    { name="Smart.pr"},
]
classifiers=[
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Django>=3.2",
    "django-picklefield>=3.2",
]
description="Scheduled jobs in Django"
license = { file = "LICENSE" }
readme = "README.rst"
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/smartpr/django-future"
